--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
           <label for="end">End Time:</label>
           <input id="end" class="form-control" type="text">
         </div>
-      </form> 
+      </form>
+      <div class="output">
+      </div>
     </div>
   </body>
 </html>
